...
                      height: 36,
                      fit: BoxFit.contain,
                    ),
                    const SizedBox(height: 30),

                    Text(
                      'Selamat Datang, $csName!',
                      style: const TextStyle(
                        fontSize: 22,
                        fontWeight: FontWeight.bold,
                        color: Colors.black87,
                      ),
                    ),
...
